compiler/test/fail/math_string_args.js
// Cannot do math operation with non-numerical literals.
Math.max("1", "2");
